--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Thunderclouds</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="navigation_icon_description">Navigation Icon</string>
+    <string name="notification_icon_description">Notification Icon</string>
+    <string name="template_tittle_1">Seul, South Korea</string>
+    <string name="template_title_2">Tuesday, Today</string>
+    <string name="template_title_3">Weather</string>
+    <string name="template_title_4">11PM</string>
+    <string name="template_title_5">Partly Cloudy</string>
+    <string name="template_title_6">13°</string>
 </resources>
